--- a/memy/package.json
+++ b/memy/package.json
@@ -4,16 +4,23 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha"
+    "test": "mocha",
+    "createdb": "./createdb.sh"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/csurf": "^1.9.36",
     "@types/express": "^4.17.6",
+    "@types/express-session": "^1.17.0",
     "@types/mocha": "^7.0.2",
     "@types/morgan": "^1.9.0",
+    "@types/sqlite3": "^3.1.6",
+    "connect-sqlite3": "^0.9.11",
     "cookie-parser": "~1.4.4",
+    "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
