--- a/memy/package.json
+++ b/memy/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "mocha",
-    "createdb": "./createdb.sh"
+    "createdb": "node createdb.js"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
